--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
+    "classnames": "^2.5.1",
+    "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^13.0.2",
+    "typescript": "^5"
   }
 }
